--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "serve": "webpack serve",
-    "stats" : "--stats-children"
+    "stats": "--stats-children"
   },
   "author": "AliNaderkurdi",
   "license": "ISC",
@@ -26,7 +26,8 @@
     "sass": "^1.75.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
-    "typescript": "^5.1.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
