--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,18 @@
     "background_color": "#FFFFFF",
     "orientation": "any",
     "icons": [
-        
+            {
+              "src": "/web-app-manifest-192x192.png",
+              "sizes": "192x192",
+              "type": "image/png",
+              "purpose": "maskable"
+            },
+            {
+              "src": "/web-app-manifest-512x512.png",
+              "sizes": "512x512",
+              "type": "image/png",
+              "purpose": "maskable"
+            },
             {
               "src": "icons/windows11/SmallTile.scale-100.png",
               "sizes": "71x71"
