--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "serve": "webpack serve",
-    "stats": "--stats-children"
+    "stats": "--stats-children",
+    "lint": "eslint \"src/**/*.{ts,js}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix"
   },
   "author": "AliNaderkurdi",
   "license": "ISC",
@@ -19,12 +21,17 @@
     "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.18.0",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "eslint": "^9.18.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
