--- a/.github/workflows/linting-code.yml
+++ b/.github/workflows/linting-code.yml
@@ -6,5 +6,5 @@ jobs:
     lint: 
        runs-on: ubuntu-latest
        steps:
-            - name: print message
-            run: echo 'linting code'!
+            - name: linting message
+            run: echo "linting code"
