--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,5 +1,5 @@
-name: print message on console when a push is made
-
+name: deployment 
+#this work flow is for deployment but for now !
 on : push
 
 jobs :
@@ -7,5 +7,5 @@ jobs :
         run-on : ubuntu-latest
         steps:
             - name: print message
-              run : echo 'hello world!'
+              run : echo 'dumy deployment'
 
